package eterea.programa.dia.service.domain.dto;

import lombok.*;

@Getter
@Setter
@Builder
@NoArgsConstructor
@AllArgsConstructor
public class ReservaOrigenDto {

    private Integer reservaOrigenId;
    private String nombre;

}
