classDiagram
    class ProgramaDiaDto {
        +List~VoucherDto~ vouchers
        +List~ReservaOrigenDto~ reservaOrigens
        +List~ClienteMovimientoDto~ clienteMovimientos
        +String errorMessage
    }

    class VoucherDto {
        +Long voucherId
        +OffsetDateTime fechaServicio
        +String nombrePax
        +Integer paxs
        +String productos
        +Long reservaId
        +String numeroVoucher
        +UsuarioDto user
        +ClienteDto cliente
        +HotelDto hotel
        +ProveedorDto proveedor
        +ReservaDto reserva
    }

    class ReservaOrigenDto {
        +Integer reservaOrigenId
        +String nombre
    }

    class ClienteMovimientoDto {
        +Long clienteMovimientoId
        +Long reservaId
        +BigDecimal importe
        +ComprobanteDto comprobante
        +ClienteDto cliente
        +MonedaDto moneda
    }

    class ClienteDto {
        +Long clienteId
        +String nombre
        +String cuit
        +String razonSocial
    }

    class ReservaDto {
        +Long reservaId
        +String nombrePax
        +BigDecimal diferenciaWeb
        +ClienteDto cliente
    }

    class ComprobanteDto {
        +Integer comprobanteId
        +CuentaDto cuenta
    }

    class HotelDto {
        +Integer hotelId
    }

    class ProveedorDto {
        +Long proveedorId
    }

    class UsuarioDto {
        +String login
    }

    class MonedaDto {
        +Integer monedaId
    }

    class TrackDto {
        +String uuid
        +String descripcion
        +String status
    }

    class EmpresaDto {
        +Integer empresaId
        +Integer negocioId
        +String razonSocial
    }

    class CuentaDto {
        +Long numeroCuenta
        +String nombre
    }

    class ReservaContextDto {
        +Long reservaContextId
        +Long reservaId
        +Long voucherId
        +Long clienteMovimientoId
        +Long orderNumberId
        +Boolean facturaPendiente
        +BigDecimal diferenciaWeb
    }

    ProgramaDiaDto "1" -- "N" VoucherDto : contiene
    ProgramaDiaDto "1" -- "N" ReservaOrigenDto : contiene
    ProgramaDiaDto "1" -- "N" ClienteMovimientoDto : contiene
    VoucherDto "1" -- "1" ClienteDto : tiene
    VoucherDto "1" -- "1" HotelDto : tiene
    VoucherDto "1" -- "1" ProveedorDto : tiene
    VoucherDto "1" -- "1" ReservaDto : tiene
    VoucherDto "1" -- "1" UsuarioDto : tiene
    ReservaDto "1" -- "1" ClienteDto : tiene
    ClienteMovimientoDto "1" -- "1" ComprobanteDto : tiene
    ClienteMovimientoDto "1" -- "1" ClienteDto : tiene
    ClienteMovimientoDto "1" -- "1" MonedaDto : tiene
    ComprobanteDto "1" -- "1" CuentaDto : tiene
